[package]
name = "hbd"
version = "0.1.0"
edition = "2024"

[dependencies]
mysql = "25.0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
log4rs = { version = "1.3", features = ["console_appender", "file_appender", "rolling_file_appender", "pattern_encoder"] }
syslog = "6.1"
env_logger = "0.10"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
lockfreehashmap = "0.1"
crossbeam = "0.8.4"
crossbeam-utils = "0.8.21"
